--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,43 @@
-node_modules
+# Compiled output
+dist/
+out-tsc/
+build/
+
+# Dependencies
+node_modules/
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Logs and debugging
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+debug.log
+.log
+
+# Angular-specific files
+.angular/
+.angular/cache/
+.angular/cli/
+
+
+# Test coverage reports
+coverage/
+*.lcov
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
+
+# Temporary files
+temp/
+tmp/
