--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,64 @@
-# Compiled output
+# Node dependencies
+node_modules/
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Angular build files
 dist/
 out-tsc/
-build/
+.tmp/
 
-# Dependencies
-node_modules/
-
-# IDEs and editors
-.idea/
+# IDE and Editor files
 .vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# Logs and debugging
+# Logs and debugging files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 debug.log
-.log
-
-# Angular-specific files
-.angular/
-.angular/cache/
-.angular/cli/
-
-
-# Test coverage reports
-coverage/
-*.lcov
-
-# Miscellaneous
 .DS_Store
-Thumbs.db
 
-# Temporary files
-temp/
-tmp/
+# Compiled files
+*.js
+*.js.map
+*.d.ts
+
+# Coverage reports
+coverage/
+karma-coverage/
+test-results/
+
+# Cache and temporary files
+.angular/
+.cache/
+.npm/
+
+# Firebase deployment
+firebase.json
+.firebaserc
+
+# Cypress, Playwright, and e2e test artifacts
+cypress/videos/
+cypress/screenshots/
+playwright-report/
+e2e/videos/
+e2e/screenshots/
+
+# ESLint, Prettier, and Linting logs
+.eslintcache
+.prettierignore
+stylelintcache
+
+# Docker
+docker-compose.override.yml
+
+# Misc
+*.log
